# janschatgptkernel

./: README.md  pyproject.toml
example/: example.ipynb
janschatgptkernel/: kernel.json
src/janschatgptkernel/: __main__.py  install_kernelspec.py  kernel.py
